2004-07-08  Kazuhiro Inaoka  <inaoka.kazuhiro@renesas.com>

	* gas/m32r/pic.exp: Add New Test case for @GOTOFF, @GOT, @PLT.
	* gas/m32r/pic2.s: New file: Test case for @GOTOFF, @GOT, @PLT.
	* gas/m32r/pic2.d: New file: Expected results.

2004-07-08  Richard Sandiford  <rsandifo@redhat.com>

	* gas/mips/elf-rel7.d: Expect relocations against bar to refer to bar.
	* gas/mips/elf-refl19.d: Likewise L2.

2004-07-03  Richard Sandiford  <rsandifo@redhat.com>

	* gas/mips/elf{,el}-rel.d: Adjust so that the earliest %hi() matches
	the earliest %lo().
	* gas/mips/elf-rel11.d: Don't expect the relocs to be reordered.
	* gas/mips/elf-rel20.[sd]: New test.
	* gas/mips/mips.exp: Run it.

2004-07-03  Maciej W. Rozycki  <macro@linux-mips.org>

	* gas/mips/elf-rel9.[sd]: Fix typo in %lo() expression.

2004-07-01  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/ia64/group-1.d: New.
	* gas/ia64/group-1.s: Likewise.

	* gas/ia64/ia64.exp: Add group-1 to test comdat group.

2004-06-30  James E Wilson  <wilson@specifixinc.com>

	* gas/ia64/dv-imply.d: Update.
	* gas/ia64/dv-mutex.d: Likewise.
	* gas/ia64/dv-safe.d: Likewise.

2004-06-29  Alan Modra  <amodra@bigpond.net.au>

	* gas/m68k/mode5.s: Pad section.
	* gas/m68k/mode5.d: Update.

2004-06-28  Alan Modra  <amodra@bigpond.net.au>

	* gas/ppc/power4.d: Update.

2004-06-24  Alan Modra  <amodra@bigpond.net.au>

	* gas/i386/prescott.s: Remove fisttpd and fisttpq.
	* gas/i386/prescott.d: Update.

2004-06-08  Jakub Jelinek  <jakub@redhat.com>

	* gas/ia64/dv-raw-err.s: Add some new postinc tests.
	* gas/ia64/dv-raw-err.l: Updated.

2004-05-28  Peter Barada <peter@the-baradas.com>

	* gas/m68k/mode5.s: New test file.  Checks conversion of mode 5
	addressing with zero offset into mode 2 addressing.
	* gas/m68k/mode5.d: New file: Expected disassmbly.
	* gas/m68k/all.exp: Run new test.

2004-05-27  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/ia64/regs.d: Updated.

2004-05-26  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/ia64/ia64.exp: Run invalid-ar.
	