@@ -1,10 +1,0 @@
-#objdump: -r
-#name: vtable entry0
-
-.*: +file format .*
-
-RELOCATION RECORDS FOR \[.text\]:
-OFFSET +TYPE +VALUE 
-0+0000010 R_.*_GNU_VTENTRY  vtbl_a
-
-
