@@ -1,2 +1,0 @@
- .text
- .vtable_entry vtbl_a, 16
