@@ -1,10 +1,0 @@
-#objdump: -r
-#name: vtable entry1
-
-.*: +file format .*
-
-RELOCATION RECORDS FOR \[.text\]:
-OFFSET +TYPE +VALUE 
-0+0000000 R_.*_GNU_VTENTRY  vtbl_a.*
-
-
