@@ -1,10 +1,0 @@
-#objdump: -r
-#name: vtable inherit0
-
-.*: +file format .*
-
-RELOCATION RECORDS FOR \[.data\]:
-OFFSET +TYPE +VALUE 
-0+0000000 R_.*_GNU_VTINHERIT  \*ABS\*
-0+0000010 R_.*_GNU_VTINHERIT  vtbl_a
-
