@@ -1,6 +1,0 @@
-.*: Assembler messages:
-.*:1: Error: expected `vtbl_a' to have already been set for .vtable_inherit
-.*GAS.*
-
-
- +1.*vtable_inherit vtbl_a, 0
