@@ -1,1 +1,0 @@
- .vtable_inherit vtbl_a, 0
